--- a/WebApplication1/Content/NiceAdmin/index.html
+++ b/WebApplication1/Content/NiceAdmin/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -31,7 +31,7 @@
 	<link href="css/widgets.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-responsive.css" rel="stylesheet" />
-	<link href="css/xcharts.min.css" rel=" stylesheet">	
+	<link href="css/xcharts.min.css" rel="stylesheet">	
 	<link href="css/jquery-ui-1.10.4.min.css" rel="stylesheet">
     <!-- =======================================================
         Theme Name: NiceAdmin
